# authentication-frontend

./: .cfignore  .env.authdev1  .env.build  .env.local  .env.sample  .eslintignore  .eslintrc.js  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .secrets.baseline  Dockerfile  Dockerfile-stub  README-PROXY-SETUP.md  README.md  SECURITY.md  cf-template.yaml  cf-template.yaml.bak  client.js  deploy-authdevs.sh  deploy-dev.sh  deploy-sandpit.sh  dev-app-orchstub.js  dev-app.js  dev-check-environment.js  dev.Dockerfile  docker-compose-proxy.yml  docker-compose.frontend.yml  docker-compose.imposter.yml  docker-compose.snapshots.yml  docker-compose.yml  docker-entrypoint.sh  esbuild.config.js  eslint.config.js  local.Dockerfile  manifest.yml  mocharc.json  nodemon.json  (+25 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit
.run/: Integration Tests.run.xml  Template Mocha.run.xml  Unit Tests.run.xml
basic-auth-sidecar/: Caddyfile  Dockerfile  Dockerfile.httpie  default.conf  entrypoint.sh  nginx.conf
ci/: pipeline.yaml
cloudformation/: alb.yaml  domains.yaml  readme.md  redis.yaml  scaling.yaml  security.yaml  template.yaml
custom-lint-rules/: index.js  no-res-locals-write.js
imposter-stub/: AuthInternalApi.yaml  openapi-plugin-config.yaml  rest-plugin-config.yaml
journey-map/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.server.json
micro-stub/: Dockerfile  index.html  micro-stub-server.js  nginx.conf  package.json
scripts/: _create_env_file.py  (+20 more)
(+1469 files in other folders)
