[project]
version = "0.1.0"
name = "authentication-frontend"
dependencies = [
    "boto3",
    "botocore",
    "jmespath",
    "python-dateutil",
    "python-dotenv",
    "s3transfer",
    "six",
    "urllib3",
    "click"
]

[tool.pylint]
max-line-length = "88"
disable = '''missing-module-docstring,
        missing-class-docstring,
        missing-function-docstring,
        invalid-name,
        too-few-public-methods,
        line-too-long
        '''
ignore = ".venv"

[tool.pylint.main]
load-plugins = "pylint_actions"

[tool.flake8]
max-line-length = "88"
extend-ignore = ["E203", "E701", "E501"]

[tool.isort]
profile = "black"
